third_party/rust/chromium_crates_io/vendor/toml_edit-0.22.22/tests/fixtures/invalid/bool/starting-same-false.stderr
TOML parse error at line 1, column 32
  |
1 | starting-same-false     = falsey
  |                                ^
expected newline, `#`
